<resources>
    <string name="app_name">DanamonTask</string>
    <string name="content_description">Image Content Description</string>
    <string name="title_login">Login</string>
    <string name="title_login_description">Please Fill the detail for Log in to your account</string>
    <string name="title_label_email">Email</string>
    <string name="title_enter_email">Enter your email</string>
    <string name="title_enter_password">Enter your password</string>
    <string name="title_label_password">Password</string>
    <string name="title_register">Register</string>
    <string name="title_register_description">Please Fill the detail for Register</string>
    <string name="title_register_error">Register error, your email already exist</string>
    <string name="title_role_user">User</string>
    <string name="title_role_admin">Admin</string>
    <string name="title_label_role">Role</string>
    <string name="title_enter_username">Username</string>
    <string name="title_label_username">Username</string>
    <string name="title_register_login">Login Failed. Please check your email or password and try again.</string>
    <string name="title_field_required">This field is required.</string>
    <string name="title_admin">Admin</string>
    <string name="title_data_empty">Data is empty</string>
    <string name="title_error">There is an error</string>
    <string name="title_error_no_internet">No Internet connection</string>
    <string name="title_error_no_internet_des">Please check your internet connection</string>
    <string name="title_try_again">Try Again</string>
    <string name="title_error_des">Your requested cannot be processed.</string>
    <string name="title_users">Users</string>
    <string name="title_verification">Verification</string>
    <string name="title_verification_des">For security purposes, please enter your password to confirm deletion.</string>
    <string name="title_verification_failed">Verification Failed. Please check your password and try again.</string>
    <string name="title_confirmation_delete">Delete User</string>
    <string name="title_confirmation_delete_des">Are you sure you want to delete user %1$s?</string>
    <string name="title_edit">Edit</string>
    <string name="title_save">Save</string>
    <string name="title_delete">Delete</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_edit_description">Modify User Information</string>
    <string name="title_password_cannot_empty">Password cannot be empty</string>
</resources>