<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:text="@string/title_admin"
        android:fontFamily="@font/ff_cocon"
        android:gravity="center"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingStart="@dimen/_52sdp"
        android:paddingEnd="@dimen/_52sdp"
        android:singleLine="true"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_logout"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:background="@drawable/bg_circle"
        android:contentDescription="@string/content_description"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_logout"
        android:visibility="visible"
        android:layout_marginEnd="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_toolbar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_empty_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/title_data_empty"/>

</androidx.constraintlayout.widget.ConstraintLayout>